--- a/config.env
+++ b/config.env
@@ -5,9 +5,9 @@ CONFIG_ENV=config.env
 #内核源地址
 KERNEL_SOURCE=https://github.com/SOVIET-ANDROID/kernel_xiaomi_raphael.git
 #分支
-KERNEL_SOURCE_BRANCH=14.0-DSP
+KERNEL_SOURCE_BRANCH=14.0-OC
 #内核配置文件
-KERNEL_CONFIG=arch/arm64/configs/raphael_defconfig
+KERNEL_CONFIG=raphael_defconfig
 
 #启用lxc-docker支持，鉴于很多人都不明白，禁用，懂的自己开启。默认支持KernelSU。
 ENABLE_LXC=true
