--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ CONFIG_ENV=config.env
 #内核源地址
 KERNEL_SOURCE=https://github.com/SOVIET-ANDROID/kernel_xiaomi_raphael.git
 #分支
-KERNEL_SOURCE_BRANCH=14.0-OC
+KERNEL_SOURCE_BRANCH=dev/14.0-OC
 #内核配置文件
 KERNEL_CONFIG=raphael_defconfig
 
