--- a/config.env
+++ b/config.env
@@ -29,7 +29,7 @@ ARCH=arm64
 
 #额外附加命令，默认启用LLVM=1 LLVM_IAS=1 
 #EXTRA_CMDS:LD=ld.lld
-EXTRA_CMDS:LLVM=1 LLVM_IAS=1 -enable-trivial-auto-var-init-zero-knowing-it-will-be-removed-from-clang
+EXTRA_CMDS:-ftrivial-auto-var-init=zero
 
 #Ccache,可加速二次构建
 ENABLE_CCACHE=false 
@@ -199,7 +199,7 @@ CUSTOM_CLANG_SOURCE=
 CUSTOM_CLANG_BRANCH=
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
-CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
+CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu- -ftrivial-auto-var-init=zero
 
 ## AOSP
 #CLANG_BRANCH=android12-platform-release
