--- a/config.env
+++ b/config.env
@@ -7,7 +7,7 @@ KERNEL_SOURCE=https://github.com/MiCode/Xiaomi_Kernel_OpenSource.git
 #分支
 KERNEL_SOURCE_BRANCH=bsp-manet-u-oss
 #内核配置文件
-KERNEL_CONFIG=vendor/manet_GKI.config
+KERNEL_CONFIG=gki_defconfig
 
 #启用lxc-docker支持，鉴于很多人都不明白，禁用，懂的自己开启。默认支持KernelSU。
 ENABLE_LXC=false
