--- a/config.env
+++ b/config.env
@@ -3,22 +3,22 @@ CONFIG_ENV=config.env
 #一般来说只需要按实际需要修改5－20行的相关内容就可以。包含18个工作流可同时工作可最大化提高编译内核的成功率，助力LXC,KernelSU 。
 #工具链集包含AOSP clang ,LLVM, ARM gcc ,SD-clang(高通的llvm工具链）,Proton-clang, Slim-LLVM, ZyC clang,Mandi-Sa-clang,linaro gcc ,Google gcc_4.9 ,Android NDK ,arter97_gcc等
 #内核源地址
-KERNEL_SOURCE=https://github.com/SOVIET-ANDROID/kernel_xiaomi_raphael.git
+KERNEL_SOURCE=https://github.com/onettboots/bool-x_xiaomi_raphael.git
 #分支
-KERNEL_SOURCE_BRANCH=14.0-DSP
+KERNEL_SOURCE_BRANCH=14-DSPocd
 #内核配置文件
 KERNEL_CONFIG=raphael_defconfig
 
 #启用lxc-docker支持，鉴于很多人都不明白，禁用，懂的自己开启。默认支持KernelSU。
-ENABLE_LXC=false
+ENABLE_LXC=true
 
 #KernelSU相关，默认开启。
-ENABLE_KERNELSU=true
-ADD_KPROBES_CONFIG=true
-ADD_OVERLAYFS_CONFIG=true
+ENABLE_KERNELSU=false 
+ADD_KPROBES_CONFIG=false 
+ADD_OVERLAYFS_CONFIG=false 
 
 #gki内核使用
-KERNELSU_TAG=main
+# KERNELSU_TAG=main
 #非gki内核使用比如4.19,4.14(官方已经停止了非gki的支持，最后版本为0.95)
 #KERNELSU_TAG=v0.9.5
 
